--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -10,6 +10,7 @@
 <body>
     <div class="main-content">
         {{>header}}
+        <p>This site is created by Neeraj Gupta. Data is comming from mapbox and weatherstack.com!</p>
         <img class="portrait" src="/img/robots.jpeg">
     </div>
     {{>footer}}
